[package]
name = "rust-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.10"
dotenvy = "0.15.6"
serde = { version = "1.0.154", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["postgres", "runtime-tokio-native-tls"] }
time = "0.3.20"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.3.0", features = ["v4"] }
