[package]
name = "rust-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
axum = "0.6.10"
dotenvy = "0.15.6"
log = "0.4.17"
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
simplelog = "0.12.1"
sqlx = { version = "0.6.2", features = ["postgres", "runtime-tokio-native-tls", "time", "chrono", "uuid"] }
time = "0.3.20"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.3.0", features = ["v4"] }
